@@ -1,4 +1,4 @@
-function d = msd(files, calib_um, window, dim)
+function d = msd(files, window, dim, frame_rate, calib_um)
 % 3DFM function  
 % Rheology 
 % last modified 01/21/06 (jcribb)
@@ -7,9 +7,11 @@ function d = msd(files, calib_um, window, dim)
 % the Stokes-Einstein relation) for an aggregate number of beads.
 %  
 %  [d] = msd;
-%  [d] = msd(files, calib_um, window, dim);  
+%  [d] = msd(files, window, dim, frame_rate, calib_um);  
 %   
-%  where "files" is the filename containing video tracking data (wildcards ok) 
+%  where "calib_um" is the microns per pixel conversion unit
+%        "frame_rate" is the video tracking frame rate in [frames / second].
+%        "files" is the filename containing video tracking data (wildcards ok) 
 %        "window" is a vector containing window sizes of tau when computing MSD. 
 %		 "dim" is the dimension of the input data (1D, 2D, or 3D).
 %  
@@ -21,9 +23,10 @@ function d = msd(files, calib_um, window, dim)
 %        - default dim = 2
 %
 
-if (nargin < 4) | isempty(dim)      dim = 2;   end
-if (nargin < 3) | isempty(window)   window = [1 2 5 10 20 50 100 200 500 1000 1001];  end
-if (nargin < 2) | isempty(calib_um) calib_um = 0.152; end;
+if (nargin < 5) | isempty(calib_um) calib_um = 0.152; end;
+if (nargin < 4) | isempty(frame_rate) frame_rate = []; end;
+if (nargin < 3) | isempty(dim)      dim = 2;   end
+if (nargin < 2) | isempty(window)   window = [1 2 5 10 20 50 100 200 500 1000 1001];  end
 if (nargin < 1) | isempty(files)    files = '*.mat'; end
 
 % load in the constants that identify the output's column headers for the current
@@ -31,7 +34,7 @@ if (nargin < 1) | isempty(files)    files = '*.mat'; end
 video_tracking_constants;
 
 % load video data
-v = load_video_tracking(files, [], 'm', calib_um, 'relative', 'yes', 'table');
+v = load_video_tracking(files, frame_rate, 'm', calib_um, 'relative', 'yes', 'table');
 
 % for every bead
 for beadID = 0 : get_beadmax(v);
